[tool.poetry]
name = "nfactorialpoetry"
version = "0.1.0"
description = "Just Description"
authors = ["jeangoujan <104026427+jeangoujan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
